--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -3,3 +3,16 @@ $print : 995;
 $pixels : 0;
 $full : 100%;
 $url: "../img";
+
+$color_gray1 : #000;
+$color_gray2 : #666;
+$color_gray3 : #c4c4c4;
+$color_gray4 : #ececec;
+
+$color_puple1 : #713BB9;
+$color_puple2 : #A475FF;
+$color_puple3 : #9255E4;
+
+$color_orange1 : #EA5504;
+$color_orange2 : #FFBA4D;
+$color_orange3 : #FFCB40;
