--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1043,6 +1043,147 @@ button {
   color: #fff;
 }
 
+#wrap.open {
+  height: 100vh;
+  overflow: hidden;
+}
+
+.side_nav {
+  position: fixed;
+  top: 0;
+  left: -100%;
+  z-index: 1000;
+  width: 100%;
+  height: 101%;
+  overflow-y: auto;
+  background-color: #fff;
+  -webkit-transition: left 0.3s;
+  transition: left 0.3s;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.side_nav.open {
+  left: 0;
+}
+
+.side_nav .tit {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 12.5vw;
+  background-color: #FFCB40;
+  padding-left: 6.11111vw;
+  font-size: 4.44444vw;
+  letter-spacing: -0.05em;
+  font-weight: 500;
+  color: #000;
+}
+
+.side_nav .__closed {
+  position: absolute;
+  right: 3.05556vw;
+  top: 1.11111vw;
+  display: block;
+  width: 10vw;
+  height: 10vw;
+  background: url(../img/ico_closed_menu.svg) no-repeat 0 0/cover;
+}
+
+.side_nav .quick_menu_list {
+  margin: 4.16667vw 5vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border: 2px solid #ECECEC;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 10px;
+  padding: 4.72222vw 0;
+  letter-spacing: -0.05em;
+}
+
+.side_nav .quick_menu_list li {
+  width: calc(100% / 3);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 3.61111vw;
+}
+
+.side_nav .quick_menu_list li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  padding-top: 11.11111vw;
+}
+
+.side_nav .quick_menu_list li:nth-child(1) a {
+  background: url(../img/ico_login.svg) no-repeat 50% 0/10vw;
+}
+
+.side_nav .quick_menu_list li:nth-child(2) a {
+  background: url(../img/ico_join.svg) no-repeat 50% 0/10vw;
+}
+
+.side_nav .quick_menu_list li:nth-child(3) a {
+  background: url(../img/ico_pwfind.svg) no-repeat 50% 0/10vw;
+}
+
+.side_nav .quick_menu_list li:nth-child(2) {
+  border-left: 1px solid #ECECEC;
+  border-right: 1px solid #ECECEC;
+}
+
+.side_nav nav {
+  height: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  background-color: #F4F5F7;
+  padding: 5.55556vw 4.16667vw;
+}
+
+.side_nav nav li {
+  background: url(../img/ico_arrow_right.svg) no-repeat 100% 3.33333vw/6.66667vw;
+  color: #333;
+  letter-spacing: -0.05em;
+  border-bottom: 1px solid rgba(196, 196, 196, 0.5);
+  padding: 2.77778vw 0;
+}
+
+.side_nav nav li .t1 {
+  font-size: 5vw;
+  font-weight: 500;
+}
+
+.side_nav nav li a {
+  font-size: 4.16667vw;
+  margin-right: 2.77778vw;
+}
+
 .main .main_cont {
   width: 100%;
   position: relative;
