--- a/assets/scss/layout/_layout.scss
+++ b/assets/scss/layout/_layout.scss
@@ -62,6 +62,107 @@ button {
         color:#fff;
     }
 }
+#wrap {
+    &.open {
+        height: 100vh;
+        overflow: hidden;
+    }
+}
+.side_nav {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    z-index: 1000;
+    width: 100%;
+    height: 101%;
+    overflow-y: auto;
+    background-color: #fff;
+    transition: left 0.3s;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    &.open {
+        left: 0;
+    }
+    .tit {
+        display: flex;
+        width: 100%;
+        align-items: center;
+        height: vw(45);
+        background-color: #FFCB40;
+        padding-left:vw(22);
+        font-size: vw(16);
+        letter-spacing: -0.05em;
+        font-weight: 500;
+        color:#000;
+    }
+    .__closed {
+        position: absolute;
+        right:vw(11);
+        top:vw(4);
+        display: block;
+        width: vw(36);   
+        height: vw(36);
+        background: url(../img/ico_closed_menu.svg) no-repeat 0 0 / cover;
+    }
+
+    .quick_menu_list {
+        margin:vw(15) vw(18);
+        display: flex;
+        border: 2px solid #ECECEC;
+        box-sizing: border-box;
+        border-radius: 10px;
+        padding:vw(17) 0;
+        letter-spacing: -0.05em;
+        li {
+            width: calc(100% / 3);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: vw(13);
+            a {
+                display: flex;
+                justify-content: center;
+                width: 100%;
+                padding-top: vw(40);
+            }
+            &:nth-child(1) a {
+                background: url(../img/ico_login.svg) no-repeat 50% 0 / vw(36);
+            }
+            &:nth-child(2) a {
+                background: url(../img/ico_join.svg) no-repeat 50% 0 / vw(36);
+            }
+            &:nth-child(3) a {
+                background: url(../img/ico_pwfind.svg) no-repeat 50% 0 / vw(36);
+            }
+            &:nth-child(2) {
+                border-left: 1px solid #ECECEC;
+                border-right: 1px solid #ECECEC;
+            }
+        }
+    }
+    nav {
+        height: 100%;
+        flex: 1;
+        background-color: #F4F5F7;
+        padding:vw(20) vw(15);
+        li {
+            background: url(../img/ico_arrow_right.svg) no-repeat 100%  vw(12) / vw(24);
+            color:#333;
+            letter-spacing: -0.05em;
+            border-bottom: 1px solid rgba(196, 196, 196, 0.5);
+            padding:vw(10) 0;
+            .t1 {
+                font-size: vw(18);
+                font-weight: 500;
+            }
+            a {
+                font-size: vw(15);
+                margin-right: vw(10);
+            }
+        }
+    }
+}
 @include desktop {
 
     
