--- a/assets/scss/base/_font.scss
+++ b/assets/scss/base/_font.scss
@@ -49,3 +49,9 @@
         url('../fonts/NotoSansKR-Black.woff') format('woff'), 
         url('../fonts/NotoSansKR-Black.otf') format('opentype'); 
  } 
+ @font-face {
+  font-family: 'Cafe24Ohsquare';
+  src: url('../fonts//Cafe24Ohsquare.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
