--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -881,6 +881,138 @@ header.header .inner .btn_user img {
   display: block;
 }
 
+@media (min-width: 1030px) {
+  header.header {
+    border-bottom: 2px solid #DBDBDB;
+    position: relative;
+  }
+  header.header .inner {
+    width: 1030px;
+    margin: 0 auto;
+    padding: 27px 0 24px;
+  }
+  header.header .inner .logo {
+    width: 200px;
+  }
+  header.header .inner ._menu {
+    width: 30px;
+    height: 20px;
+    margin-top: 30px;
+    background: url(../img/ico_menu.svg) no-repeat 0 0/100%;
+  }
+  header.header .inner .btn_user {
+    margin-top: 30px;
+    width: 32px;
+    height: 32px;
+  }
+  .main_menu {
+    padding: 0;
+    position: relative;
+    z-index: 101;
+  }
+  .main_menu::after {
+    display: block;
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: #DBDBDB;
+    position: absolute;
+    left: 0;
+    top: 52px;
+  }
+  .main_menu .inner {
+    width: 1030px;
+    margin: 0 auto;
+  }
+  .main_menu .__nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: relative;
+    z-index: 1;
+  }
+  .main_menu .__nav li {
+    position: relative;
+  }
+  .main_menu .__nav li:nth-child(5) .sub_nav {
+    -webkit-transform: translateX(-25%);
+            transform: translateX(-25%);
+  }
+  .main_menu .__nav li:nth-child(6) .sub_nav {
+    -webkit-transform: translateX(-30%);
+            transform: translateX(-30%);
+  }
+  .main_menu .__nav li:last-child .sub_nav {
+    left: auto;
+    right: 0;
+  }
+  .main_menu .__nav li > a {
+    height: 52px;
+    font-size: 22px;
+    font-weight: 400;
+    letter-spacing: 0;
+  }
+  .main_menu .__nav li > a:hover, .main_menu .__nav li > a.active {
+    color: #EA5504;
+    position: relative;
+  }
+  .main_menu .__nav li > a:hover::after, .main_menu .__nav li > a.active::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: #EA5504;
+    position: absolute;
+    left: 0;
+    top: -2px;
+  }
+  .main_menu .__nav li > a:hover + .sub_nav, .main_menu .__nav li > a.active + .sub_nav {
+    display: block;
+  }
+  .main_menu .sub_nav {
+    display: none;
+    position: absolute;
+    white-space: nowrap;
+    left: 0;
+  }
+  .main_menu .sub_nav a {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 45px;
+    margin-right: 20px;
+    color: #777;
+    font-size: 20px;
+  }
+  .main_menu .sub_nav a:last-child {
+    margin-right: 0;
+  }
+  .main_menu .sub_nav a:hover, .main_menu .sub_nav a.active {
+    font-weight: 500;
+    color: #333;
+  }
+  .main_menu .sub_bg {
+    width: 100%;
+    height: 45px;
+    background: #F4F5F7;
+    border-bottom: 2px solid #DBDBDB;
+    position: absolute;
+    left: 0;
+    top: 52px;
+    z-index: 0;
+    display: none;
+  }
+}
+
 .consult_call {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -918,6 +1050,10 @@ footer.footer {
 
 footer.footer .inner {
   padding: 4.16667vw;
+}
+
+footer.footer .inner .logo {
+  display: none;
 }
 
 footer.footer .inner p {
@@ -961,8 +1097,77 @@ footer.footer .inner .copyright {
   margin-top: 2.77778vw;
 }
 
+@media (min-width: 1030px) {
+  .consult_call {
+    display: none;
+  }
+  footer.footer {
+    background: #444;
+    text-align: left;
+    margin-top: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  footer.footer .inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 1030px;
+    margin: 0 auto;
+    padding: 30px 0;
+  }
+  footer.footer .inner .logo {
+    display: block;
+    width: 220px;
+    margin-right: 53px;
+  }
+  footer.footer .inner .logo img {
+    width: 100%;
+  }
+  footer.footer .inner p {
+    color: #fff;
+    font-size: 16px;
+  }
+  footer.footer .inner .link_list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+    margin-bottom: 10px;
+  }
+  footer.footer .inner .link_list a {
+    color: #eee;
+    font-size: 18px;
+    font-weight: 500;
+    margin-right: 20px;
+  }
+  footer.footer .inner .link_list a::after {
+    display: none;
+    width: 1px;
+    height: 2.77778vw;
+    margin: 0 2.77778vw;
+    background-color: #777;
+  }
+  footer.footer .inner .link_list a:last-child::after {
+    display: none;
+  }
+  footer.footer .inner .copyright {
+    margin-top: 5px;
+  }
+}
+
 button {
   all: unset;
+  cursor: pointer;
 }
 
 .btn.__top {
@@ -972,6 +1177,10 @@ button {
   width: 11.11111vw;
   height: 11.11111vw;
   background: url(../img/btn_top.svg) no-repeat 0 0/cover;
+}
+
+.side_banner {
+  display: none;
 }
 
 .btn_main {
@@ -1187,6 +1396,107 @@ button {
   margin-right: 2.77778vw;
 }
 
+@media (min-width: 1030px) {
+  .btn_main {
+    margin: 0 auto;
+    width: 500px;
+    height: 78px;
+    -webkit-box-shadow: 2px 2px 1px 1px #000;
+            box-shadow: 2px 2px 1px 1px #000;
+  }
+  .btn_main span {
+    font-size: 30px;
+    padding-right: 25px;
+    background: url(../img/ico_polygon.svg) no-repeat 100% 50%/15px;
+  }
+  .btn_main + .btn_main {
+    margin-top: 25px;
+  }
+  .btn_main.puple {
+    background-color: #A475FF;
+  }
+  .side_banner {
+    display: block;
+    width: 220px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    position: fixed;
+    right: 10px;
+    top: 50%;
+    z-index: 200;
+  }
+  #wrap.open {
+    height: 100%;
+    overflow: visible;
+  }
+  .side_nav {
+    position: absolute;
+    top: 113px;
+    left: 50%;
+    z-index: 1000;
+    width: 1030px;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    height: auto;
+    overflow-y: auto;
+    display: none;
+    border: 2px solid #C4C4C4;
+  }
+  .side_nav.open {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    left: 50%;
+  }
+  .side_nav .side_header {
+    display: none;
+  }
+  .side_nav .__closed {
+    position: absolute;
+    right: 9px;
+    top: 10px;
+    width: 44px;
+    height: 44px;
+  }
+  .side_nav nav {
+    height: 100%;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    background-color: #fff;
+    padding: 30px 45px;
+  }
+  .side_nav nav li {
+    background: none;
+    color: #333;
+    border-bottom: 1px solid #C4C4C4;
+    padding: 0 40px;
+    height: 80px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .side_nav nav li .t1 {
+    font-size: 22px;
+    font-weight: 500;
+    padding: 0;
+    width: 130px;
+  }
+  .side_nav nav li a {
+    font-size: 18px;
+    margin-right: 0;
+    padding: 0 10px;
+  }
+  .side_nav nav li:last-child {
+    border-bottom: 0 solid #000;
+  }
+}
+
 .main .main_cont {
   width: 100%;
   position: relative;
@@ -1213,7 +1523,7 @@ button {
 
 .main .main_cont .swiper-pagination .swiper-pagination-bullet {
   opacity: 1;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.2);
   width: 3.33333vw;
   height: 3.33333vw;
   margin: 0 4px;
@@ -1221,7 +1531,7 @@ button {
 }
 
 .main .main_cont .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .main .main_cont .main_banner .swiper-slide img {
@@ -1418,6 +1728,235 @@ button {
 
 .main .cont4 .btn_main {
   margin-top: 5.55556vw;
+}
+
+@media (min-width: 1030px) {
+  .main .main_cont .swiper-pagination {
+    left: 50%;
+    margin-left: -515px;
+  }
+  .main .main_cont .swiper-pagination .swiper-pagination-bullet {
+    width: 16px;
+    height: 16px;
+    margin: 0 5px;
+  }
+  .main .main_cont .main_banner .swiper-slide {
+    height: 544px;
+    overflow: hidden;
+  }
+  .main .main_cont .main_banner .swiper-slide img {
+    position: absolute;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    width: auto;
+  }
+  .main .main_cont .main_banner .swiper-slide a {
+    font-size: 24px;
+    font-weight: 700;
+    color: #fff;
+    border: 2px solid #FFFFFF;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    border-radius: 10px;
+    position: absolute;
+    left: 50%;
+    top: 292px;
+    margin-left: -450px;
+    padding: 15px 38px;
+  }
+  .main h2 {
+    text-align: center;
+  }
+  .main h2.h2 {
+    font-size: 48px;
+    line-height: 110%;
+    letter-spacing: 0;
+    color: #000;
+  }
+  .main .cont1 {
+    text-align: left;
+    padding: 108px 0 114px;
+  }
+  .main .cont1 h2 {
+    text-align: left;
+  }
+  .main .cont1 .inner {
+    width: 1030px;
+    margin: 0 auto;
+    padding-left: 65px;
+    position: relative;
+  }
+  .main .cont1 p {
+    margin-top: 20px;
+    font-size: 24px;
+    line-height: 36px;
+  }
+  .main .cont1 .img {
+    position: absolute;
+    right: 0;
+    top: -50px;
+    margin-top: 0;
+  }
+  .main .cont1 .img img {
+    width: 369px;
+    margin: 0;
+  }
+  .main .cont2 {
+    padding: 76px 0;
+  }
+  .main .cont2 .inner {
+    width: 1030px;
+    margin: 0 auto;
+  }
+  .main .cont2 dl {
+    margin-top: 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .main .cont2 dl div {
+    width: 50%;
+    margin-bottom: 26px;
+    padding: 25px 0 30px 220px;
+  }
+  .main .cont2 dl div:nth-child(1) {
+    background: url(../img/ico_main_cont2_01.svg) no-repeat 0 0/190px 182px;
+  }
+  .main .cont2 dl div:nth-child(2) {
+    background: url(../img/ico_main_cont2_02.svg) no-repeat 0 0/190px 182px;
+  }
+  .main .cont2 dl div:nth-child(3) {
+    background: url(../img/ico_main_cont2_03.svg) no-repeat 0 0/190px 182px;
+    margin-bottom: 0;
+  }
+  .main .cont2 dl div:nth-child(4) {
+    background: url(../img/ico_main_cont2_04.svg) no-repeat 0 0/190px 182px;
+  }
+  .main .cont2 dl div:last-child {
+    margin-bottom: 0;
+  }
+  .main .cont2 dl dt {
+    font-size: 28px;
+    font-weight: 500;
+  }
+  .main .cont2 dl dd {
+    margin-top: 20px;
+    font-size: 22px;
+    letter-spacing: -0.03em;
+  }
+  .main .cont3 {
+    padding: 75px 0;
+  }
+  .main .cont3 .inner {
+    width: 1030px;
+    margin: 0 auto;
+  }
+  .main .cont3 .tit {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 506px;
+    height: 70px;
+    font-size: 24px;
+    font-weight: 500;
+    border-radius: 35px;
+    margin-top: 32px;
+  }
+  .main .cont3 .tit + .tit {
+    margin-top: 0;
+    margin-left: 14px;
+  }
+  .main .cont3 dl {
+    margin-top: 28px;
+    border: 5px solid #E5E5E5;
+    border-radius: 20px;
+    padding: 45px 68px;
+    font-size: 24px;
+    margin-bottom: 40px;
+  }
+  .main .cont3 dl > div {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-left: 20px;
+    margin-bottom: 15px;
+  }
+  .main .cont3 dl > div:last-child {
+    margin-bottom: 0;
+  }
+  .main .cont3 dl > div::before {
+    width: 6px;
+    height: 6px;
+  }
+  .main .cont3 dl dt {
+    font-weight: 700;
+    width: 95px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .main .cont3 dl dt span:last-child {
+    margin-right: 0;
+  }
+  .main .cont3 dl dd::before {
+    content: ":";
+    font-weight: 400;
+    margin: 0 0.55556vw;
+  }
+  .main .cont4 {
+    padding: 80px 0;
+    background: #E9E9E9 url(../img/bg_slash_pc.svg) no-repeat 50% 0/cover;
+    text-align: left;
+  }
+  .main .cont4 .inner {
+    width: 1030px;
+    margin: 0 auto;
+    position: relative;
+  }
+  .main .cont4 p {
+    font-size: 30px;
+    color: #000;
+    line-height: 44px;
+    font-weight: 500;
+  }
+  .main .cont4 h2 {
+    text-align: left;
+    margin-top: 25px;
+    font-size: 64px;
+    color: #713BB9;
+    line-height: 70px;
+  }
+  .main .cont4 .img {
+    margin-top: 0;
+    position: absolute;
+    right: 55px;
+    top: 0;
+  }
+  .main .cont4 .img img {
+    width: 470px;
+  }
+  .main .cont4 .btn_main {
+    margin-top: 5.55556vw;
+  }
 }
 
 .member {
@@ -1679,3 +2218,25 @@ input[type=checkbox]:checked {
 }
 
 /* pc layout common */
+@media (min-width: 1030px) {
+  .pc {
+    display: block !important;
+  }
+  .m {
+    display: none !important;
+  }
+  .pc_f {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+  }
+  .m_f {
+    display: none !important;
+  }
+  body {
+    font-size: 18px;
+    -ms-overflow-style: none;
+    overflow-x: hidden;
+    letter-spacing: -0.05px;
+  }
+}
