--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1415,6 +1415,16 @@ button {
   .btn_main.puple {
     background-color: #A475FF;
   }
+  .btn_submit {
+    height: 64px;
+    letter-spacing: -0.03px;
+  }
+  .btn_submit > span {
+    font-size: 26px;
+  }
+  .btn.__top {
+    display: none;
+  }
   .side_banner {
     display: block;
     width: 220px;
@@ -2134,6 +2144,87 @@ button {
   letter-spacing: -0.03em;
 }
 
+@media (min-width: 1030px) {
+  .member {
+    width: 1030px;
+    margin: 0 auto;
+    margin-bottom: 0;
+    padding: 100px 0;
+  }
+  .member .btn_submit + .btn_submit {
+    margin-top: 12px;
+  }
+  .member .tab_wrap {
+    height: 60px;
+  }
+  .member .tab_wrap a {
+    font-size: 22px;
+  }
+  .member .form_wrap {
+    margin-top: 50px;
+    border: 1px solid #C4C4C4;
+    padding: 56px 215px;
+  }
+  .member .form_wrap .txt {
+    font-size: 18px;
+    letter-spacing: -0.03px;
+  }
+  .member .form_wrap .txt + .input_wrap {
+    margin-top: 10px;
+  }
+  .member .input_wrap {
+    margin-top: 0;
+    margin-bottom: 34px;
+  }
+  .member .agree_wrap {
+    letter-spacing: -0.03px;
+    margin: 0 0 30px;
+  }
+  .member .agree_wrap label {
+    font-size: 20px;
+    padding-left: 12px;
+  }
+  .member .agree_wrap label span {
+    margin-left: 4px;
+  }
+  .member .agree_wrap label + label {
+    margin-top: 10px;
+  }
+  .member input.text {
+    padding-left: 50px;
+    height: 60px;
+    letter-spacing: -0.03px;
+    font-size: 22px;
+    background-repeat: no-repeat;
+    background-position: 12px center;
+    background-size: 32px;
+  }
+  .member input.text::-webkit-input-placeholder {
+    color: #999;
+    font-weight: 400;
+  }
+  .member input.text:-ms-input-placeholder {
+    color: #999;
+    font-weight: 400;
+  }
+  .member input.text::-ms-input-placeholder {
+    color: #999;
+    font-weight: 400;
+  }
+  .member input.text::placeholder {
+    color: #999;
+    font-weight: 400;
+  }
+  .member input.text + .text {
+    margin-top: 10px;
+  }
+  .member .error_txt {
+    font-size: 18px;
+    margin: 10px 0;
+    letter-spacing: -0.03px;
+  }
+}
+
 body {
   font-size: 6.11111vw;
   -ms-overflow-style: none;
@@ -2238,5 +2329,9 @@ input[type=checkbox]:checked {
     -ms-overflow-style: none;
     overflow-x: hidden;
     letter-spacing: -0.05px;
+  }
+  input[type=checkbox] {
+    width: 24px;
+    height: 24px;
   }
 }
