--- a/assets/scss/pages/_member.scss
+++ b/assets/scss/pages/_member.scss
@@ -120,5 +120,74 @@
     }
 }
 @include desktop {
+    .member {
+        width: 1030px;
+        margin:0 auto;
+        margin-bottom: 0;
+        padding:100px 0;
+        .btn_submit {
+            & + .btn_submit {
+                margin-top: 12px;
+            }
+        }
     
+        .tab_wrap {
+            height: 60px;
+            a {
+                font-size: 22px;
+            }
+        }
+    
+        .form_wrap {
+            margin-top: 50px;
+            border: 1px solid #C4C4C4;
+            padding:56px 215px;
+            .txt {
+                font-size: 18px;
+                letter-spacing: -0.03px;
+                & + .input_wrap {
+                    margin-top: 10px;
+                }
+            }
+        }
+        .input_wrap {
+            margin-top: 0;
+            margin-bottom: 34px;
+        }
+        .agree_wrap {
+            letter-spacing: -0.03px;
+            margin: 0 0 30px;
+            label {
+                font-size: 20px;
+                padding-left: 12px;
+                span {
+                    margin-left: 4px;
+                }
+                & + label {
+                    margin-top: 10px;
+                }
+            }
+        }
+        input.text {
+            padding-left: 50px;
+            height: 60px;
+            letter-spacing: -0.03px;
+            font-size: 22px;
+            background-repeat: no-repeat;
+            background-position: 12px center;
+            background-size: 32px;
+            &::placeholder {
+                color:#999;
+                font-weight: 400;
+            }
+            & + .text {
+                margin-top: 10px;
+            }
+        }
+        .error_txt {
+            font-size: 18px;
+            margin: 10px 0;
+            letter-spacing: -0.03px;
+        }
+    }
 }
