--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -2196,6 +2196,12 @@ button {
   .member .form_wrap .txt {
     font-size: 18px;
     letter-spacing: -0.03px;
+    padding-left: 10px;
+  }
+  .member .form_wrap .txt::before {
+    width: 3px;
+    height: 3px;
+    left: 3px;
   }
   .member .form_wrap .txt + .input_wrap {
     margin-top: 10px;
@@ -2250,6 +2256,12 @@ button {
     font-size: 18px;
     margin: 10px 0;
     letter-spacing: -0.03px;
+    padding-left: 10px;
+  }
+  .member .error_txt::before {
+    width: 3px;
+    height: 3px;
+    left: 3px;
   }
 }
 
