--- a/assets/scss/pages/_member.scss
+++ b/assets/scss/pages/_member.scss
@@ -171,6 +171,12 @@
             .txt {
                 font-size: 18px;
                 letter-spacing: -0.03px;
+                padding-left: 10px;
+                &::before {
+                    width: 3px;
+                    height: 3px;
+                    left: 3px;
+                }
                 & + .input_wrap {
                     margin-top: 10px;
                 }
@@ -214,6 +220,12 @@
             font-size: 18px;
             margin: 10px 0;
             letter-spacing: -0.03px;
+            padding-left: 10px;
+            &::before {
+                width: 3px;
+                height: 3px;
+                left: 3px;
+            }
         }
     }
 }
